# vector_db_practise

./: pyproject.toml
notebooks/: chromadb_practise.ipynb  qdrant_practise.ipynb
